--- a/src/homeworks/HomeWork10/styles.css
+++ b/src/homeworks/HomeWork10/styles.css
@@ -1,4 +1,4 @@
-.homework10-container {
+/* .homework10-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,12 +9,12 @@
 
 .outputs {
   margin-top: 20px;
-}
+} */
 
-.output-block {
+/* .output-block {
   border: 1px solid black;
   padding: 10px;
   margin-bottom: 10px;
   width: 200px;
   text-align: center;
-}
+} */
